--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <header>
             <img alt="logo" src="images/logo_tonytronics.png">
-            <input type="text" placeholder="Zoeken naar ...">
+            <input id="zoeken" type="text" placeholder="Zoeken naar ...">
             <span><a href="#">Winkelmand (0)</a></span>
             <nav>
                 <a href="#">NIEUWE PRODUCTEN</a>
@@ -31,56 +31,85 @@
                 <input type="checkbox"> Merk A<br>
                 <input type="checkbox"> Merk B<br>
                 <input type="checkbox"> Merk C<br><br>
+
+                <h4>Microcontroller</h4>
+                <input type="checkbox"> Microbit<br>
+                <input type="checkbox"> Arduino<br>
+                <input type="checkbox"> Raspberrypi<br><br>
             </form>
         </aside>
         
         <main>
             <div>
                 <img src="images/producten/product_1.jpg">
-                <h5>Product 1</h5>
-                <p>€ 9,99</p>
+                <h5>Electrisch plaatje 3d Turbo</h5>
+                <p>€ 69,99</p>
             </div>
             <div>
                 <img src="images/producten/product_2.jpg">
-                <h5>Product 2</h5>
-                <p>€ 9,99</p>
+                <h5>Bordje X330 met zieke kabel</h5>
+                <p>€ 54,99</p>
             </div>
             <div>
                 <img src="images/producten/product_3.jpg">
-                <h5>Product 3</h5>
-                <p>€ 9,99</p>
+                <h5>Duizendplaat X3</h5>
+                <p>€ 19,99</p>
             </div>
             <div>
                 <img src="images/producten/product_4.jpg">
-                <h5>Product 4</h5>
-                <p>€ 9,99</p>
+                <h5>Stok met plaatje T8</h5>
+                <p>€ 79,99</p>
             </div>
             <div>
                 <img src="images/producten/product_5.jpg">
-                <h5>Product 5</h5>
-                <p>€ 9,99</p>
+                <h5>Spike 3000 Turbo</h5>
+                <p>€ 299,99</p>
             </div>
             <div>
                 <img src="images/producten/product_6.jpg">
-                <h5>Product 6</h5>
-                <p>€ 9,99</p>
+                <h5>Darkhole X5</h5>
+                <p>€ 199,99</p>
             </div>
             <div>
                 <img src="images/producten/product_7.jpg">
-                <h5>Product 7</h5>
-                <p>€ 9,99</p>
+                <h5>WallBoard M5</h5>
+                <p>€ 249,99</p>
             </div>
             <div>
                 <img src="images/producten/product_8.jpg">
-                <h5>Product 8</h5>
-                <p>€ 9,99</p>
+                <h5>SelfGit G1</h5>
+                <p>€ 14,99</p>
             </div>
             <div>
                 <img src="images/producten/product_9.jpg">
-                <h5>Product 9</h5>
-                <p>€ 9,99</p>
+                <h5>Universum Q5</h5>
+                <p>€ 449,99</p>
+            </div>
+            <!-- onze producten -->
+            <div>
+                <img src="images/producten/product_10.jpg">
+                <h5>Drone XA9</h5>
+                <p>€ 99,99</p>
+            </div>
+            <div>
+                <img src="images/producten/product_11.jpg">
+                <h5>MSI GeForce RTX 3060 GAMING X 12G</h5>
+                <p>€ 729,99</p>
+            </div>
+            <div>
+                <img src="images/producten/product_12.jpg">
+                <h5>Asus AIO Liquid CPU Cooler</h5>
+                <p>€ 274,99</p>
             </div>              
         </main>
-        
+        <footer>
+            <p>
+                <a href="https://graafschapcollege.nl/" target="blank">Contact</a>
+            </p>
+        </footer>
+        <script scr="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://ajax.microsoft.com/ajax/jquery/jquery-3.4.1.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="store.js"></script>
     </body>
 </html>
