ik heb veranderd

--- a/index.html
+++ b/index.html
@@ -86,30 +86,30 @@
                 <p>€ 449,99</p>
             </div>
             <div>
-                <img src="images/drone.jpg">
+                <img src="images/producten/drone.jpg">
                 <h5>Drone B7 Turbo PRO</h5>
                 <p>€ 299,99</p>
             </div> 
             <div>
-                <img src="images/laptop.jpg">
+                <img src="images/producten/laptop.jpg">
                 <h5>Laptop Deluxe</h5>
                 <p>€ 449,99</p>
             </div>   
             <div>
-                <img src="images/cooler.jpg">
+                <img src="images/producten/cooler.jpg">
                 <h5>Cooler Neon C4</h5>
                 <p>€ 49,99</p>
             </div>              
         </main>
         <footer>
             <p>
-                    <a href="https://graafschapcollege.nl/ " target="_blank">Contact</a>                
+                <a href="https://graafschapcollege.nl/ " target="_blank">Contact</a>                
             </p>
 
         </footer>
         <script src="http://code.jqurery.com/jquery-3.4.1.min.js"></script>
         <script src="http://ajax.microsoft.com/ajax/jquery/jquery-3.4.1.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>1
-        <script src="winkelmand.js"></script>
+        <script src="store.js"></script>
     </body>
 </html>
