--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <aside>
             <form>
                 <h4>Prijs</h4>
-                <input type="checkbox"> €0-€50<br>
-                <input type="checkbox"> €50-€100<br>
-                <input type="checkbox"> €100-€500<br><br>
+                <input id="eerste_prijs" type="checkbox"> €0-€50<br>
+                <input id="tweede_prijs" type="checkbox"> €50-€100<br>
+                <input id="derde_prijs" type="checkbox"> €100-€500<br><br>
 
                 <h4>Merk</h4>
                 <input type="checkbox"> Merk A<br>
@@ -40,62 +40,62 @@
         </aside>
         
         <main>
-            <div>
+            <div id="artikel_1">
                 <img src="images/producten/product_1.jpg">
                 <h5>Elektrisch plaat 3d Turbo</h5>
                 <p>€ 69,99</p>
             </div>
-            <div>
+            <div id="artikel_2">
                 <img src="images/producten/product_2.jpg">
                 <h5>Bordje X330 met Zieke kabel</h5>
                 <p>€ 54,99</p>
             </div>
-            <div>
+            <div id="artikel_3">
                 <img src="images/producten/product_3.jpg">
                 <h5>Duizend plaat X3</h5>
                 <p>€ 19,99</p>
             </div>
-            <div>
+            <div id="artikel_4">
                 <img src="images/producten/product_4.jpg">
                 <h5>Stok met Plaats T8</h5>
                 <p>€ 79,99</p>
             </div>
-            <div>
+            <div id="artikel_5">
                 <img src="images/producten/product_5.jpg">
                 <h5>Spike 3000 Turbo</h5>
                 <p>€ 299,99</p>
             </div>
-            <div>
+            <div id="artikel_6">
                 <img src="images/producten/product_6.jpg">
                 <h5>Darkhole X5</h5>
                 <p>€ 199,99</p>
             </div>
-            <div>
+            <div id="artikel_7">
                 <img src="images/producten/product_7.jpg">
                 <h5>WallBoard M5</h5>
                 <p>€ 249,99</p>
             </div>
-            <div>
+            <div id="artikel_8">
                 <img src="images/producten/product_8.jpg">
                 <h5>SelfGit G1</h5>
                 <p>€ 14,99</p>
             </div>
-            <div>
+            <div id="artikel_9">
                 <img src="images/producten/product_9.jpg">
                 <h5>Universum Q5</h5>
                 <p>€ 449,99</p>
             </div>
-            <div>
+            <div id="artikel_10">
                 <img src="images/producten/drone.jpg">
                 <h5>Drone B7 Turbo PRO</h5>
                 <p>€ 299,99</p>
             </div> 
-            <div>
+            <div id="artikel_11">
                 <img src="images/producten/laptop.jpg">
                 <h5>Laptop Deluxe</h5>
                 <p>€ 449,99</p>
             </div>   
-            <div>
+            <div id="artikel_12">
                 <img src="images/producten/cooler.jpg">
                 <h5>Cooler Neon C4</h5>
                 <p>€ 49,99</p>
@@ -105,11 +105,11 @@
             <p>
                 <a href="https://graafschapcollege.nl/ " target="_blank">Contact</a>                
             </p>
-
         </footer>
         <script src="http://code.jqurery.com/jquery-3.4.1.min.js"></script>
         <script src="http://ajax.microsoft.com/ajax/jquery/jquery-3.4.1.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>1
         <script src="store.js"></script>
+        <script src="winkelmand.js"></script>
     </body>
 </html>
