--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <img alt="logo" src="images/logo_tonytronics.png">
             <input id="zoeken" type="text" placeholder="Zoeken naar ...">
-            <span><a href="#">Winkelmand (0)</a></span>
+            <span><a href="#">Winkelmand (<a id="divResult"></a>)</a></span>
             <nav>
                 <a href="#">NIEUWE PRODUCTEN</a>
                 <a href="#">MEEST VERKOCHT</a>
@@ -109,7 +109,8 @@
         </footer>
         <script src="http://code.jqurery.com/jquery-3.4.1.min.js"></script>
         <script src="http://ajax.microsoft.com/ajax/jquery/jquery-3.4.1.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>1
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="store.js"></script>
+        <script src="winkelmand.js"></script>
     </body>
 </html>
